[package]
name = "rust-multisig-2-of-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = {version = "0.29.0", features = ["rpc"]}
dirs-next = "2.0"
bitcoin_scripts = "0.10.0"
regex = "1.10.5"
hex = "0.4"
bitcoin = "0.32.2"
jsonrpc = "0.18.0"

